# files

./: README.md
cookie_auth_ts/: package-lock.json  package.json  vite.config.ts
cookie_auth_ts/src/: index.ts  plugin.ts  types.ts
cookie_auth_ts/src/axios/: interceptor.ts
cookie_auth_ts/src/composables/: useAuth.ts
django-cookie-jwt/: authentication.py  middleware.py  mixins.py  pyproject.toml  settings.py  views.py
django-cookie-jwt/django_cookie_jwt_httponly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
